# pa-applet-revamp

./: configure.ac  meson.build
src/: key_grabber.c  meson.build  volume_scale.c
